<resources>
    <string name="app_name">HomeMaid</string>
    <string name="welcome_text">Welcome to Home Maid!</string>
    <string name="otp_text_view">Enter verification code</string>
    <string name="otp_text">We have sent you a 4 digit verification code on</string>
    <string name="copyright_text_one">By creating an account,you agree to our </string>
    <string name="copyright_text_two">Terms of Service and Privacy Policy</string>
    <string name="sign_up_text">Sign Up on Home Maid!</string>
    <string name="err_msg_mobile_number">Mobile number cannot be empty</string>
    <string name="err_msg_mobile_number_wrong">Please enter correct mobile number</string>
    <string name="err_msg_email">Please enter email ID</string>
    <string name="err_msg_email_valid">Please enter valid email ID</string>
    <string name="err_msg_full_name">Please enter full name</string>
    <string name="err_message_retrofit">Something went wrong. Please try again later!</string>
    <string name="no_data_available">No data found yet. Stay tune to get more list.</string>
    <string name="no_data_review">No review giving by any user yet.</string>
    <string name="no_data_available_favorite">Your favorite list is empty now.</string>
    <string name="already_rating_message">You already rated this maid.</string>
    <string name="share_app">Hey I strongly recommend this app, you will find this immensely useful to search maids in your society. Download it now : https://play.google.com/store/apps/details?id=com.google.android.apps.plus</string>
    <string name="title_one">Home</string>
    <string name="title_two">Maid</string>
    <string name="facebook_app_id">314350802357922</string>
    <string name="fb_login_protocol_scheme">fb314350802357922</string>

    <string name="loading">Loading...</string>

    <string name="action_settings">Settings</string>
    <string name="action_fav">Favorites</string>
    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_favorite">Favorites</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_refer">Refer</string>
    <string name="nav_item_feedback">Feedback</string>
    <string name="nav_item_about_us">About Us</string>
    <string name="nav_item_logout">Logout</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_favorite</item>
        <item>@string/nav_item_history</item>
        <item>@string/nav_item_refer</item>
        <item>@string/nav_item_feedback</item>
        <item>@string/nav_item_about_us</item>
        <item>@string/nav_item_logout</item>
    </string-array>


    <string name="title_home">Home</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_history">History</string>
    <string name="title_refer">Refer</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_about_us">About Us</string>
    <string name="title_logout">Logout</string>


    <string name="Rs">\u20B9</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Users</string>
    <string name="slide_1_desc">The easiest way to find maids/cooks in your locality.</string>

    <string name="slide_2_title">Important Notice</string>
    <string name="slide_2_desc">Make sure! We are just providing you the details of maids and cooks available in your locality. Find them, shortlist them and hire them as per your convenience.</string>

    <string name="slide_3_title">Terms and Conditions</string>
    <string name="slide_3_desc">Please do all the needful documentation and verification before hiring any maid/cook as troubleclear will not be liable for any fraudulent and misshappening  although all the maids/cooks are varied by troubleclear. </string>

    <string name="slide_4_title">Thanks!</string>
    <string name="slide_4_desc">we appreciate your support and cooperation and will always be working to bring the best for you.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="text_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel </string>

    <string name="user_name">Pawan Deshpnde</string>
    <string name="sms_text">मुझे मेड की ज़रुरत है, कृपया कॉल कीजिये.</string>
    <string name="pricing_inform">NA means maid/cook is not available only for that category, it includes in other category. Pricing/cost is an estimated cost, you can adjust it after communicate to her.</string>
    <string name="verification_inform">You can see the valid Id proofs of cooks/maids on clicking the left side verified icon.</string>
    <string name="user_review">Bulbul is very good in cooking food but sometimes she is not punctual and delay to cook the food. Apart from that you can hire her and make her in testing mode.</string>
    <string name="maid_share_text">Hi, \nYour Friend "name" has sent you a reference of maid/cook "name". \nYou can contact her at 9971256588. \nYou can also get details of so many maids/cooks available in your area. \nDownload the app now. </string>
</resources>
