<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_one"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="45sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_two"
                android:textColor="@color/orange"
                android:textSize="45sp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_text_view"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_text"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+91 9971227563"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <com.goodiebag.pinview.Pinview
            android:id="@+id/pin_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cursorVisible="true"
            app:inputType="number"
            app:forceKeyboard="true"
            app:password="false"
            app:pinBackground="@drawable/pin_view_drawable"
            app:pinHeight="40dp"
            app:pinLength="4"
            app:pinWidth="40dp"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginTop="20dp"/>



        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"/>


    </LinearLayout>

</LinearLayout>