<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_one"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="45sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_two"
                android:textColor="@color/orange"
                android:textSize="45sp"
                />

        </LinearLayout>
        
        
        <EditText
            android:id="@+id/et_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="+91- Mobile Number"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:padding="10dp"
            android:background="@drawable/edittext_box"
            android:textColor="@color/white"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Sign In"
            android:background="@drawable/rounded_background_accent"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"/>







        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="20dp"
            android:layout_centerHorizontal="true"
            >

            <Button
                android:id="@+id/fb_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Sign in with Facebook"
                android:layout_alignParentLeft="true"
                android:textSize="13sp"
                android:padding="10dp"
                android:textColorHint="@color/white"
                android:background="@drawable/rounded_background_blue"/>

            <Button
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:hint="Sign in with Google"
                android:padding="10dp"
                android:textSize="13sp"
                android:textColorHint="@color/white"
                android:drawablePadding="8dp"
                android:background="@drawable/rounded_background_accent"/>


        </RelativeLayout>

        </RelativeLayout>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/copyright_text_one"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/terms"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/copyright_text_two"
            android:layout_marginBottom="50dp"/>

    </RelativeLayout>

</RelativeLayout>